@@ -174,7 +174,7 @@ public class KnockbackGameManager {
         List<Player> alivePlayers = new ArrayList<>(context.getAlivePlayers());
         String winMode = getWinMode(context);
         if (alivePlayers.size() == 1 && "last_standing".equals(winMode)) {
-            Player winner = alivePlayers.getFirst();
+            Player winner = alivePlayers.get(0);
             context.setWinner(winner);
             handleWin(winner);
         }
@@ -394,7 +394,7 @@ public class KnockbackGameManager {
             return null;
         }
 
-        return topPlayers.getFirst();
+        return topPlayers.get(0);
     }
 
     private void handleMostKillsOutcome(GameContext<Player, Location, World, Material, ItemStack, Sound, Block, Entity> context) {
@@ -408,7 +408,7 @@ public class KnockbackGameManager {
             return;
         }
 
-        Player winner = topPlayers.getFirst();
+        Player winner = topPlayers.get(0);
         context.setWinner(winner);
         handleWin(winner);
 
